--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="static">
 			<br>
 			<br>
-			<img src="icon/name.png" alt="Octopoll" align="middle">
+			<img style="margin:0px auto;display:block" src="icon/name.png" alt="Octopoll"/>
 			<br>
 			<a href="https://github.com/Kixile/octo-poll">Visit our Git</a>
 			<br>
@@ -23,3 +23,4 @@
 	</div>
 </body>
 </html>
+
