static part added

--- a/angular/idex.html
+++ b/angular/idex.html
@@ -19,10 +19,26 @@
             </div>
             <div ng-show="panel.isSet(2)">
             </div>
-            <div ng-show="panel.isSet(3)">
+            <div id="static_contact" ng-show="panel.isSet(3)">
+                <br>
+                <br>
+                <img style="margin:0 auto;display:block" src="../icon/name.png" alt="Octopoll"/>
+                <br>
+                <a href="https://github.com/Kixile/octo-poll">Visit our Git</a>
+                <br>
+                <h2>Team</h2>
+                <p>Karl-Sander Häidma</p>
+                <p>Innar Hallik</p>
+                <p>Jarmo-Hendrik Hints</p>
             </div>
-            <div ng-show="panel.isSet(4)">
-            </div>
+            <div id="static_about" ng-show="panel.isSet(4)">
+                <br>
+                <br>
+                <img style="margin:0 auto;display:block" src="../icon/name.png" alt="Octopoll"/>
+                <br>
+                <h2>You can read about our project</h2>
+                <a href="https://courses.cs.ut.ee/2015/vl/spring/Main/Projekt4">here</a>
+            </div
         </section>
         <script type="text/javascript" src="angular.min.js"></script>
         <script type="text/javascript" src="app.js"></script>
