--- a/angular/idex.html
+++ b/angular/idex.html
@@ -17,18 +17,18 @@
             </ul>
             <div ng-show="panel.isSet(1)">
                 <!--  Poll Add Form -->
-                <form name="reviewForm" ng-controller="PollsAddController as poll_test"  ng-submit="poll_test.addPoll(pollForm)">
+                <form name="reviewForm" ng-controller="PollsAddController as poll_test"  ng-submit="poll_test.addPoll()">
                     <br>
                     <fieldset class="form-group">
-                        <select ng-model="pollForm.type" class="form-control" ng-options="stars for stars in [1,2,3]" title="Type">
+                        <select ng-model="poll_test.poll.type" class="form-control" ng-options="stars for stars in [1,2,3]" title="Type">
                             <option value="">Type</option>
                         </select>
                     </fieldset>
                     <fieldset class="form-group">
-                        <textarea ng-model="pollForm.question" class="form-control" placeholder="Write a short review of the product..." title="Review"></textarea>
+                        <textarea ng-model="poll_test.poll.question" class="form-control" placeholder="Write a short review of the product..." title="Review"></textarea>
                     </fieldset>
                     <fieldset class="form-group">
-                        <input ng-model="pollForm.author" type="email" class="form-control" placeholder="author" title="author" />
+                        <input ng-model="poll_test.poll.author" type="email" class="form-control" placeholder="author" title="author" />
                     </fieldset>
                     <fieldset class="form-group">
                         <input type="submit" class="btn btn-primary pull-right" value="Generate"/>
