added showController to get data to show 1 poll, its temporary method and no real wive not implemented yet added proper question form, not yet final

--- a/angular/idex.html
+++ b/angular/idex.html
@@ -20,34 +20,66 @@
                 <form name="reviewForm" ng-controller="PollsAddController as poll_test"  ng-submit="poll_test.addPoll()">
                     <br>
                     <fieldset class="form-group">
-                        <select ng-model="poll_test.poll.type" class="form-control" ng-options="stars for stars in [1,2,3]" title="Type">
-                            <option value="">Type</option>
-                        </select>
+                        Question: <textarea ng-model="poll_test.poll.question" class="form-control" placeholder="Write a short review of the product..." title="Question" required></textarea>
                     </fieldset>
                     <fieldset class="form-group">
-                        <textarea ng-model="poll_test.poll.question" class="form-control" placeholder="Write a short review of the product..." title="Review"></textarea>
+                        Email: <input ng-model="poll_test.poll.author" type="email" class="form-control" placeholder="author@octo-poll.com" title="Email" required />
                     </fieldset>
                     <fieldset class="form-group">
-                        <input ng-model="poll_test.poll.author" type="email" class="form-control" placeholder="author" title="author" />
+                        A1: <input ng-model="poll_test.poll.a1" type="text" class="form-control" placeholder="Answer number 1" title="Option 1."/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        A2: <input ng-model="poll_test.poll.a2" type="text" class="form-control" placeholder="Answer number 2" title="Option 2."/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        A3: <input ng-model="poll_test.poll.a3" type="text" class="form-control" placeholder="Answer number 3" title="Option 3."/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        A4: <input ng-model="poll_test.poll.a4" type="text" class="form-control" placeholder="Answer number 4" title="Option 4."/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        A5: <input ng-model="poll_test.poll.a5" type="text" class="form-control" placeholder="Answer number 5" title="Option 5."/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        A6: <input ng-model="poll_test.poll.a6" type="text" class="form-control" placeholder="Answer number 6" title="Option 6."/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        A7: <input ng-model="poll_test.poll.a7" type="text" class="form-control" placeholder="Answer number 7" title="Option 7."/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        A8: <input ng-model="poll_test.poll.a8" type="text" class="form-control" placeholder="Answer number 8" title="Option 8."/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input ng-model="poll_test.poll.multi" type="checkbox" class="form-control" title="Enable mutable options."/>Enable mutable options.
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input ng-model="poll_test.poll.users" type="checkbox" class="form-control" title="Enable user to answer with their own options." />Enable other options.
                     </fieldset>
                     <fieldset class="form-group">
                         <input type="submit" class="btn btn-primary pull-right" value="Generate"/>
                     </fieldset>
                 </form>
-
             </div>
             <div ng-show="panel.isSet(2)" ng-controller="PollsController as Polls">
                 <br>
-                There are {{Polls.polls.length}} active polls. These are:
-                <input type="search" ng-model="q" placeholder="search"/>
-                <ul class="polls-container">
-                    <li class="polls-repeat" ng-repeat="poll in Polls.polls | filter:q as results">
-                        [{{$index + 1}}] {{poll.question}}  {{poll.author}} {{poll.date | date}}
-                    </li>
-                    <li class="animate-repeat" ng-if="results.length == 0">
-                        No results found.
-                    </li>
-                </ul>
+                <section class="panel" ng-controller="ShowController as show">
+                    There are {{Polls.polls.length}} active polls. These are:
+                    <input type="search" ng-model="q" placeholder="search"/>
+                    <ul class="polls-container">
+                        <li class="polls-repeat" ng-repeat="poll in Polls.polls | filter:q as results">
+                            [{{$index + 1}}] {{poll.question}}  {{poll.author}} {{poll.date | date}}
+                            <button type="button" data-ng-click="show.setPoll(poll)">{{$index}}</button>
+                        </li>
+                        <li class="animate-repeat" ng-if="results.length == 0">
+                            No results found.
+                        </li>
+                    </ul>
+                        <div ng-show="show.isSet()">
+                            {{show}}
+                            <br>
+                            <button type="button" data-ng-click="show.clear()">close</button>
+                        </div>
+                </section>
             </div>
             <div class="static-contact" ng-show="panel.isSet(3)">
                 <br>
