fixed "other" option radio box being a separate unit +bug with hit boxes +bug cant detect witch radio button is selected

--- a/angular/idex.html
+++ b/angular/idex.html
@@ -79,9 +79,14 @@
                             <br>
                             <h4>{{show.showPoll.question}}</h4>
                             <h6>{{show.showPoll.description}}</h6>
-
-                            <label class="options" ng-repeat="option in show.showPoll.options">
-                                <input type="{{show.optionsType()}}" name="options" ng-model="show.answer.test"> {{option}}<br>
+                            <label class="options">
+                                <div class="pre-determand-options" ng-repeat="option in show.showPoll.options">
+                                    <input type="{{show.optionsType()}}" name="options" ng-model="show.answers[$index]"> {{option}} <br>
+                                </div>
+                                <div class="user-own-option" ng-show="show.showPoll.users">
+                                    <input type="{{show.optionsType()}}" name="options" ng-model="show.answer.otherSelected">
+                                    Other:  <input type="text" ng-model="show.answer.other"><br>
+                                </div>
                             </label>
                             <br>
                             <button type="button" data-ng-click="show.clear()">close</button>
