--- a/index.html
+++ b/index.html
@@ -1,122 +1,45 @@
 <!DOCTYPE html>
 <html ng-app="octo-poll">
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="bootstrap-theme.min.css">
-    </head>
-    <body>
-        <section class="panel" ng-controller="PanelController as panel">
-            <ul class="nav-menu">
-                <li class="nav-menu-element" ng-class="{ active: panel.isSet(1) }">
-                    <a href ng-click="panel.setTab(1)">Home</a></li>
-                <li class="nav-menu-element" ng-class="{ active: panel.isSet(2) }">
-                    <a href ng-click="panel.setTab(2)">Polls</a></li>
-                <li class="nav-menu-element" ng-class="{ active: panel.isSet(3) }">
-                    <a href ng-click="panel.setTab(3)">Contact</a></li>
-                <li class="nav-menu-element" ng-class="{ active: panel.isSet(4) }">
-                    <a href ng-click="panel.setTab(4)">About</a></li>
-            </ul>
-            <div ng-show="panel.isSet(1)">
-                <!--  Poll Add Form -->
-                <form name="reviewForm" ng-controller="PollsAddController as poll_test"  ng-submit="poll_test.addPoll()">
-                    <br>
-                    <fieldset class="form-group">
-                        Question: <textarea ng-model="poll_test.poll.question" class="form-control" placeholder="Enter your question here..." title="Question" required></textarea>
-                    </fieldset>
-                    <fieldset class="form-group">
-                        Email: <input ng-model="poll_test.poll.author" type="email" class="form-control" placeholder="author@octo-poll.com" title="Email" required />
-                    </fieldset>
-                    <fieldset class="form-group">
-                        A1: <input ng-model="poll_test.poll.a1" type="text" class="form-control" placeholder="Answer number 1" title="Option 1."/>
-                    </fieldset>
-                    <fieldset class="form-group">
-                        A2: <input ng-model="poll_test.poll.a2" type="text" class="form-control" placeholder="Answer number 2" title="Option 2."/>
-                    </fieldset>
-                    <fieldset class="form-group">
-                        A3: <input ng-model="poll_test.poll.a3" type="text" class="form-control" placeholder="Answer number 3" title="Option 3."/>
-                    </fieldset>
-                    <fieldset class="form-group">
-                        A4: <input ng-model="poll_test.poll.a4" type="text" class="form-control" placeholder="Answer number 4" title="Option 4."/>
-                    </fieldset>
-                    <fieldset class="form-group">
-                        A5: <input ng-model="poll_test.poll.a5" type="text" class="form-control" placeholder="Answer number 5" title="Option 5."/>
-                    </fieldset>
-                    <fieldset class="form-group">
-                        A6: <input ng-model="poll_test.poll.a6" type="text" class="form-control" placeholder="Answer number 6" title="Option 6."/>
-                    </fieldset>
-                    <fieldset class="form-group">
-                        A7: <input ng-model="poll_test.poll.a7" type="text" class="form-control" placeholder="Answer number 7" title="Option 7."/>
-                    </fieldset>
-                    <fieldset class="form-group">
-                        A8: <input ng-model="poll_test.poll.a8" type="text" class="form-control" placeholder="Answer number 8" title="Option 8."/>
-                    </fieldset>
-                    <fieldset class="form-group">
-                        <input ng-model="poll_test.poll.multi" type="checkbox" class="form-control" title="Enable mutable options."/>Enable mutable options.
-                    </fieldset>
-                    <fieldset class="form-group">
-                        <input ng-model="poll_test.poll.users" type="checkbox" class="form-control" title="Enable user to answer with their own options." />Enable other options.
-                    </fieldset>
-                    <fieldset class="form-group">
-                        <input type="submit" class="qenerate button" value="Generate"/>
-                    </fieldset>
-                </form>
-            </div>
-            <div ng-show="panel.isSet(2)" ng-controller="PollsController as Polls">
-                <br>
-                <section class="panel" ng-controller="ShowController as show">
-                    There are {{Polls.polls.length}} active polls. These are:
-                    <input type="search" ng-model="q" placeholder="search"/>
-                    <ul class="polls-container">
-                        <li class="polls-repeat" ng-repeat="poll in Polls.polls | filter:q as results">
-                            [{{$index + 1}}] {{poll.question}}  {{poll.author}} {{poll.date | date}}
-                            <button type="button" data-ng-click="show.setPoll(poll)">{{$index}}</button>
-                        </li>
-                        <li class="animate-repeat" ng-if="results.length == 0">
-                            No results found.
-                        </li>
-                    </ul>
-                        <div ng-show="show.isSet()">
-                            {{show}}
-                            <br>
-                            <h4>{{show.showPoll.question}}</h4>
-                            <h6>{{show.showPoll.description}}</h6>
-                            <label class="options">
-                                <div class="pre-determand-options" ng-repeat="option in show.showPoll.options">
-                                    <input type="{{show.optionsType()}}" name="options" ng-model="show.answers[$index]" value="{{option}}" > {{option}} <br>
-                                </div>
-                                <div class="user-own-option" ng-show="show.showPoll.users">
-                                    <input type="{{show.optionsType()}}" name="options" ng-model="show.answers[$show.showPoll.options.length]">
-                                    Other:  <input type="text" ng-model="show.answer.other"><br>
-                                </div>
-                            </label>
-                            <br>
-                            <button type="button" data-ng-click="show.clear()">close</button>
-                        </div>
-                </section>
-            </div>
-            <div class="static-contact" ng-show="panel.isSet(3)">
-                <br>
-                <br>
-                <img style="margin:0 auto;display:block" src="icon/name.png" alt="Octopoll"/>
-                <br>
-                <a href="https://github.com/Kixile/octo-poll">Visit our Git</a>
-                <br>
-                <h2>Team</h2>
-                <p>Karl-Sander Häidma</p>
-                <p>Innar Hallik</p>
-                <p>Jarmo-Hendrik Hints</p>
-            </div>
-            <div class="static-about" ng-show="panel.isSet(4)">
-                <br>
-                <br>
-                <img style="margin:0 auto;display:block" src="icon/name.png" alt="Octopoll"/>
-                <br>
-                <h2>You can read about our project</h2>
-                <a href="https://courses.cs.ut.ee/2015/vl/spring/Main/Projekt4">here</a>
-            </div>
-        </section>
-        <script type="text/javascript" src="angular.min.js"></script>
-        <script type="text/javascript" src="app.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+
+</head>
+
+    
+
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><img src="icon/new-octo.png" width="106" height="35" alt=""></a>
+    </div>
+    
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="navbar-1">
+      <ul class="nav navbar-nav">
+        <li class="active" ng-class="navClass('home')"><a href="" ng-click="loadHome()">Home<span class="sr-only">(current)</span></a></li>
+        <li ng-class="navClass('polls')"><a href="" ng-click="loadPolls()">Polls</a></li>
+        <li ng-class="navClass('about')"><a href="" ng-click="loadAbout()">About Us</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div>
+</nav>
+
+
+  
+  <div ng-view=""></div>
+<script type="text/javascript" src="script.js"></script>
+
+
+
 </html>
