Fixed missing ng-controller tag, world became a better place

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     
 
-<body>
+<body ng-controller="NavCtrl">
 
 <nav class="navbar navbar-default" role="navigation">
   <div class="container">
