--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-1">
       <ul class="nav navbar-nav">
-        <li class="active" ng-class="navClass('home')"><a href="" ng-click="loadHome()">Home<span class="sr-only">(current)</span></a></li>
+        <li ng-class="navClass('home')"><a href="" ng-click="loadHome()">Home<span class="sr-only">(current)</span></a></li>
         <li ng-class="navClass('polls')"><a href="" ng-click="loadPolls()">Polls</a></li>
         <li ng-class="navClass('about')"><a href="" ng-click="loadAbout()">About Us</a></li>
       </ul>
@@ -41,6 +41,7 @@
   
   <div ng-view=""></div>
 <script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="polls.js"></script>
 
 </body>
 
