Minor(yet still important) fixes to poll creation.

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
                     <ul>
                     <li ng-repeat="answer in allAnswers">
                     <fieldset class="form-group">
-                        <input ng-model="answer.answer" type="text" class="form-control" placeholder="Answer {{answer.id}}" title="Option answer.id}}"  style="display:inline">
+                        <input ng-model="poll.answer" type="text" class="form-control" placeholder="Answer {{answer.id}}" title="Option {{answer.id}}"  style="display:inline">
                     </fieldset>
 
                     </li>
