--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 
                         
                     <fieldset class="form-group">
-                        <input ng-click="send($event)" class="btn btn-default" value="Generate"/>
+                        <button ng-click="send($event)" class="btn btn-default" value="Generate"/>
                     </fieldset>
                 </form>
                 <pre>form == {{ poll | json }}</pre>
