css separation fix

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <div>
                 <br>
                 <br>
-                <img style="margin:0 auto;display:block" src="icon/name.png" alt="Octopoll"/>
+                <img src="icon/name.png" alt="Octopoll"/>
                 <br>
                 <a href="https://github.com/Kixile/octo-poll">Visit our Git</a>
                 <br>
