css separation(again), fixed about page

--- a/about.html
+++ b/about.html
@@ -1,12 +1,15 @@
 <div>
                 <br>
                 <br>
-                <img src="icon/name.png" alt="Octopoll"/>
+                <a href="https://github.com/Kixile/octo-poll">
+                    <div class="imageContainer">
+                <img class="aboutLogo" src="icon/new-octo.png" alt="Octopoll"/>
+                
+                Visit our Git</a>
+                </div>
                 <br>
-                <a href="https://github.com/Kixile/octo-poll">Visit our Git</a>
-                <br>
-                <h2>Team</h2>
-                <p>Karl-Sander Häidma</p>
-                <p>Innar Hallik</p>
-                <p>Jarmo-Hendrik Hints</p>
+                <h2 class="center">Team</h2>
+                <p class="center">Karl-Sander Häidma</p>
+                <p class="center">Innar Hallik</p>
+                <p class="center">Jarmo-Hendrik Hints</p>
             </div>
