--- a/polls.html
+++ b/polls.html
@@ -4,6 +4,7 @@
 <section class="panel" ng-controller="pollsJsonCtrl">
 	  <ul>
 		<li ng-repeat="poll in allPolls.polls">
+			<a href="#/polls/{{poll.id | number}}"
 		  {{poll.question}} - <em>{{poll.owner}}</em>
 		</li>
 	  </ul>
