--- a/polls.html
+++ b/polls.html
@@ -4,8 +4,9 @@
 <section class="panel" ng-controller="pollsJsonCtrl">
 	  <ul>
 		<li ng-repeat="poll in allPolls.polls">
-			<a href="#/polls/{{poll.id | number}}"
+			<a href="#/polls/{{poll.id | number}}">
 		  {{poll.question}} - <em>{{poll.owner}}</em>
+		  </a>
 		</li>
 	  </ul>
 </section>
