Actually added the pollidcontroller to scripts ._.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <div ng-view=""></div>
 <script type="text/javascript" src="script.js"></script>
 <script type="text/javascript" src="polls.js"></script>
+<script type="text/javascript" src="PollIdController.js"></script>
 
 </body>
 
