--- a/polls.html
+++ b/polls.html
@@ -4,7 +4,7 @@
 <section class="panel" ng-controller="pollsJsonCtrl">
 	  <ul>
 		<li ng-repeat="poll in allPolls.polls">
-			<a href="#/polls/{{$index}}">
+			<a href="#/polls/{{polls.id | number}}">
 		  {{poll.question}} - <em>{{poll.owner}}</em>
 		  </a>
 		</li>
